--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
                                 <button>Create a Course</button>
                             </li>
                         </span>
-                        
+                    </ul>
+                    <ul class="mobile right">
+                        <li>Menu</li>
                     </ul>
                 </div>
             </nav>
